Client/src/component/components.css
html,
body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

.Logo {
  width: 300px;
  margin-left: 15px;
  margin-top: 8px;
}

.link {
  width: 100%;
  padding: 0;
  padding-top: 20px;
  margin-left: 20px;
  position: relative;
  display: block;
  font-size: large;
  color: black;
  text-decoration: none;
  font-family: "Roboto", sans-serif;
  right: 15px;
}

.Burger {
  display: none;
}
.Burgerstuff {
  display: none;
}

ul {
  list-style-type: none;
}

.LinkDiv li {
  display: inline;
  margin-right: 60px;
}

li a {
  text-decoration: none;
  color: #000;
}

.Links {
  float: right;
  margin-top: 60px;
  margin-right: 300px;
}

.Links ul li {
  color: rgba(255, 255, 255, 0.884);
  margin-bottom: 25px;
}

.LogoDiv {
  display: inline-block;
}

.LinkDiv {
  float: right;
  margin-top: 10px;
}

.BookingButton {
  border: solid 2px gray;
  padding: 5px 20px 5px 20px;
}

.BookingButtonDark {
  border: solid 2px gray;
  padding: 5px 20px 5px 20px;
  color: rgba(255, 255, 255, 0.884);
  margin-left: 10px;
  width: 140px;
}

.Salon {
  width: 100%;
  margin-bottom: 100px;
  margin-top: 80px;
}

.FooterDiv {
  background-color: black;
  height: 350px;
  margin-top: 80px;
}

.FooterLogo {
  width: 350px;
  margin-left: 30px;
}

.FooterLeft {
  display: inline-block;
}

.FooterLeft h5 {
  color: rgba(255, 255, 255, 0.884);
  margin-left: 50px;
  margin-bottom: 30px;
}

.item {
  max-height: 21rem;
  min-width: 17.3rem;
  padding: 35px;
}

.item img {
  width: 100%;
  height: 100%;
  pointer-events: none;
  border-radius: 2em;
}

.inner-carousel {
  display: flex;
}

.carousel {
  cursor: grab;
  overflow: hidden;
  margin-bottom: 150px;
}

.ServicesHome {
  text-align: center;
}

.Services img {
  width: 6em;
  padding: 10px 80px 10px 80px;
  margin-top: 50px;
}

.Services div {
  display: inline-block;
}

.Services h1 {
  font-weight: 500;
}
.Services h2 {
  font-weight: 300;
}

.Services ul {
  padding: 0;
  margin-top: 50px;
}

.Services li {
  width: 10em;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.OurCrew {
  text-align: center;
  margin-top: 100px;
}

.OurCrew h1 {
  font-weight: 500;
}
.OurCrew h2 {
  font-weight: 400;
  font-size: 25px;
  margin: 5px;
}
.OurCrew h3 {
  font-weight: 700;
  font-size: 15px;
  color: rgb(99, 99, 99);
  margin: 5px;
  margin-bottom: 30px;
}
.OurCrew div {
  display: inline-block;
  background-color: white;
  margin: 100px 80px 10px 80px;
  border-radius: 15px;
  width: 16em;
  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
  padding: 10px 10px 20px 10px;
}

.OurCrew .facebook {
  border: none;
  border-radius: 0;
  width: 20px;
  margin-top: 0px;
  margin-left: 8px;
  margin-right: 8px;
}

.OurCrew .instagram {
  border: none;
  border-radius: 0;
  width: 20px;
  margin-top: 0;
  margin-left: 8px;
  margin-right: 8px;
}

.OurCrew img {
  width: 8em;
  border: 3px #daa520 solid;
  border-radius: 100%;
  margin-top: 30px;
}

.OurCrew ul {
  padding: 0;
  margin-top: 70px;
}

.OurCrew li {
  width: 10em;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.ContactUs {
  background-color: white;
  margin-right: 10%;
  margin-left: 10%;
  height: 50em;
  text-align: center;
}
.ContactUs img {
  height: 50em;
  float: right;
}
.ContactUsInfo {
  text-align: left;
  margin-top: 100px;
  margin-left: 30px;
  display: inline-block;
  width: 40%;
}

.ContactUsInfo h1 {
  font-weight: 700;
  color: #505050;
}

.ContactUsInfo h3 {
  font-weight: 300;
  margin-bottom: 40px;
  margin-top: 20px;
}

.ContactUsInfo h4 {
  font-weight: 400;
  margin-top: 10px;
}

.BookingButtonContact {
  width: 150px;
  display: inline-block;
  text-align: center;
  padding: 5px;
  border: 2px solid #505050;
}

.ContactUsInfo ul {
  margin-top: 20px;
  padding: 0;
}
.BookingButtonContact li {
  margin: 0;
  padding: 0;
}

.BookingPage {
  width: 100%;
  text-align: center;
}

.Booking {
  width: auto;
  margin-top: 100px;
  border-radius: 10px;
  display: inline-block;
}

.BookingAppointmentDiv {
  height: 550px;
  margin-left: 50px;
  border-radius: 10px;
  background-color: white;
  display: inline-block;
}

.BookingAppointmentDiv img {
  width: 80px;
  border-radius: 100%;
  margin: 20px;
}

.BookingAppointmentDiv h3 {
  margin: 40px 20px 20px 20px;
}

.BookingAppointmentDiv h4 {
  margin: 10px 10px 10px 20px;
  font-size: 18px;
  font-weight: 700;
}
.BookingAppointmentDiv h6 {
  margin: 10px 20px 10px 20px;
  font-size: 13px;
  font-weight: 400;
}

.HairStylistDiv {
  width: 100%;
  height: 485px;
  text-align: center;
  border-radius: 20px;
  background-color: white;
  margin-top: 30px;
  margin-right: auto;
  margin-left: auto;
}

.HairStylistDiv img {
  width: 80px;
  border-radius: 100%;
  margin: 20px;
}
.HairStylistDiv .LoginPic {
  width: auto;
  height: 485px;
  border-top-right-radius: 30px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 30px;
  margin: 0px;
  float: right;
}
.HairStylistDiv .LoginDiv {
  width: 40%;
  height: auto;
  border-radius: 0;
  text-align: center;
  margin: 10px;
  margin-bottom: 50px;
  display: inline-block;
}

.HairStylistDiv h3 {
  margin: 40px 20px 20px 20px;
}

.HairStylistDiv h4 {
  margin: 10px 10px 10px 20px;
  font-size: 18px;
  font-weight: 700;
}
.HairStylistDiv h6 {
  margin: 10px 20px 10px 20px;
  font-size: 13px;
  font-weight: 400;
}
.AppointmentDiv {
  width: 45%;
  height: 550px;
  margin-right: 150px;
  border-radius: 10px;
  background-color: white;
  float: right;
  overflow: scroll;
  text-align: center;
}
.TestInput {
  width: 150px;
  margin: 20px;
}
.SignIn {
  width: 100px;
  height: 20px;
  margin: 20px;
}

#signInDiv {
  background-color: transparent;
  border: none;
  margin-top: 20px;
}

.SignOut {
  width: 100px;
  height: 20px;
  margin: 20px;
}
.AppointmentListDiv {
  margin-top: 110px;
}
/* ... */

